--- a/public/index.html
+++ b/public/index.html
@@ -8,16 +8,10 @@
     </head>
     <body>
         <p>hello</p>
-        <script defer src="/__/firebase/9.8.4/firebase-app-compat.js"></script>
-        <script defer src="/__/firebase/9.8.4/firebase-auth-compat.js"></script>
-        <script
-            defer
-            src="/__/firebase/9.8.4/firebase-firestore-compat.js"
-        ></script>
-        <script
-            defer
-            src="/__/firebase/9.8.4/firebase-storage-compat.js"
-        ></script>
+        <script src="https://www.gstatic.com/firebasejs/8.6.5/firebase-app.js"></script>
+        <script src="https://www.gstatic.com/firebasejs/8.6.5/firebase-auth.js"></script>
+        <script src="https://www.gstatic.com/firebasejs/8.6.5/firebase-firestore.js"></script>
+        <script src="https://www.gstatic.com/firebasejs/8.6.5/firebase-storage.js"></script>
         <script>
             // Import the functions you need from the SDKs you need
             import { initializeApp } from "firebase/app";
