--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,7 @@
             integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x"
             crossorigin="anonymous"
         />
+        <link rel="stylesheet" href="main.css" />
     </head>
     <body>
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -98,6 +99,22 @@
                 </div>
             </div>
         </nav>
+        <div class="container mt-3">
+            <div class="product">
+                <div
+                    class="thumbnail"
+                    style="
+                        background-image: url('https://via.placeholder.com/350');
+                    "
+                ></div>
+                <div class="flex-grow-1 p-4">
+                    <h5 class="title">아기다스 신발</h5>
+                    <p class="date">2030년 1월 8일</p>
+                    <p class="price">20000원</p>
+                    <p class="float-end">?0</p>
+                </div>
+            </div>
+        </div>
         <script
             src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
@@ -135,6 +152,21 @@
                 .then((result) => {
                     result.forEach((doc) => {
                         console.log(doc.data());
+                        let product = `      <div class="product">
+                <div
+                    class="thumbnail"
+                    style="
+                        background-image: url('https://via.placeholder.com/350');
+                    "
+                ></div>
+                <div class="flex-grow-1 p-4">
+                    <h5 class="title">${doc.data().name}</h5>
+                    <p class="date">2030년 1월 8일</p>
+                    <p class="price">${doc.data().price}</p>
+                    <p class="content">${doc.data().content}</p>
+                    <p class="float-end">?0</p>
+                </div>`;
+                        $(".container").append(product);
                     });
                 });
         </script>
