--- a/public/index.html
+++ b/public/index.html
@@ -160,7 +160,9 @@
                     "
                 ></div>
                 <div class="flex-grow-1 p-4">
-                    <h5 class="title">${doc.data().name}</h5>
+                    <h5 class="title"><a href="/detail.html?id=${doc.id}">${
+                            doc.data().name
+                        }</h5>
                     <p class="date">${doc.data().date}</p>
                     <p class="price">${doc.data().price}</p>
                     <p class="content">${doc.data().content}</p>
