--- a/public/upload.html
+++ b/public/upload.html
@@ -93,6 +93,8 @@
                                 content: $("#content").val(),
                                 date: new Date(),
                                 image: url,
+                                uid: JSON.parse(userInfo).uid,
+                                name: JSON.parse(userInfo).displayName,
                             };
 
                             db.collection("product")
