--- a/public/upload.html
+++ b/public/upload.html
@@ -94,7 +94,7 @@
                                 date: new Date(),
                                 image: url,
                                 uid: JSON.parse(userInfo).uid,
-                                name: JSON.parse(userInfo).displayName,
+                                author: JSON.parse(userInfo).displayName,
                             };
 
                             db.collection("product")
