--- a/public/detail.html
+++ b/public/detail.html
@@ -16,7 +16,9 @@
     <body>
         <div class="container">
             상세페이지임
-            <button id="edit">edit</button>
+
+            <button class="btn btn-outline-secondary" id="edit">edit</button>
+            <button class="btn btn-outline-secondary" id="chat">chat</button>
             <div
                 class="detail-pic my-4"
                 style="
@@ -24,7 +26,7 @@
                 "
             ></div>
             <div>
-                <h5>올린사람 : 모름</h5>
+                <h5 class="author"></h5>
                 <hr />
                 <h5 class="title">상품명</h5>
                 <p class="date">올린날짜</p>
@@ -66,6 +68,22 @@
             const storage = firebase.storage();
 
             let queryString = new URLSearchParams(window.location.search);
+            let userInfo = localStorage.getItem("userInfo");
+
+            var myuid = JSON.parse(userInfo).uid;
+
+            $("#chat").click(function () {
+                var data = {
+                    who: [myuid, sellerUid],
+                    product: productName,
+                    date: new Date(),
+                };
+                db.collection("chatroom").add(data);
+            });
+
+            var sellerUid = "";
+            var productName = "";
+
             $("#edit").click(function () {
                 window.location.href = "/edit.html?id=" + queryString.get("id");
             });
@@ -74,9 +92,13 @@
                 .get()
                 .then((result) => {
                     console.log(result.data());
+                    sellerUid = result.data().uid;
+                    productName = result.data().name;
+
+                    $(".author").html("author" + result.data().author);
                     $(".title").html(result.data().name);
                     $(".price").html(result.data().price);
-                    $(".title").html(result.data().date);
+                    $(".date").html(result.data().date);
                     $(".detail-pic").css(
                         "background-image",
                         `url(${result.data().image})`
