--- a/public/chat.html
+++ b/public/chat.html
@@ -77,9 +77,7 @@
             const db = firebase.firestore();
             const storage = firebase.storage();
             var myUid = JSON.parse(localStorage.getItem("userInfo")).uid;
-
-            var chatroomId;
-
+            var chatroomId = "";
             db.collection("chatroom")
                 .where("who", "array-contains", myUid)
                 .get()
@@ -91,24 +89,36 @@
             <h6 class="text-small">${a.id}</h6>
           </li>`;
                         $(".chat-list").append(template);
-
                         //저거 박스 누르면 채팅방 id 가져오는 코드
-                        $(".list-group-item").click(function () {
-                            var chatroomId = $(this)
-                                .children(".text-small")
-                                .text();
+                        $(".list-group-item").click(function (e) {
+                            chatroomId = $(this).children(".text-small").text();
                             console.log(chatroomId);
+                            e.stopImmediatePropagation();
+                            $(".chat-content").html("");
+                            db.collection("chatroom")
+                                .doc(chatroomId)
+                                .collection("messages")
+                                .orderBy("date")
+                                .onSnapshot((result) => {
+                                    $(".chat-content").html("");
+                                    result.forEach((a) => {
+                                        var template = `<li><span class="chat-box">${
+                                            a.data().content
+                                        }</span></li>`;
+                                        $(".chat-content").append(template);
+                                    });
+                                });
                         });
                     });
                 });
-            console.log(chatroomId);
+
             $("#send").click(function () {
                 var data = {
                     content: $("#chat-input").val(),
                     date: new Date(),
                     uid: myUid,
                 };
-
+                console.log(chatroomId);
                 db.collection("chatroom")
                     .doc(chatroomId)
                     .collection("messages")
